--- a/index.html
+++ b/index.html
@@ -141,9 +141,11 @@
         <li><a href="verval2.html">Bronsterkte</a></li>
         <li><a href="MinFFD.html">Minimale FFD</a></li>
         <li><a href="Draadjesv2.html">Draadvereiste EN-B, ASME</a></li>
-        <li><a href="afzettinggamma.html">Afzetting Gamma</a></li>
-        <li><a href="LW_Verdeler.html">Langsnaad Verdeler</a></li>
         <li><a href="cw2.html">CW / Effectieve Filmlengte</a></li>
+        <li><a href="opnamesklasseb.html">Aantal opnames EN-B</a></li>
+        <li><a href="LW_Verdeler.html">Langsnaad Verdeler</a></li>
+        <li><a href="afzettinggamma.html">Afzetting Gamma</a></li>
+        
     </ul>
 
     <button class="install-button" onclick="installPWA()" style="display: none;">
