--- a/verval2.html
+++ b/verval2.html
@@ -107,7 +107,7 @@
     </script>
 </head>
 <body>
-    <h1>Activiteitsberekening</h1>
+    <h1>Activiteit</h1>
     
     <label for="isotope">Kies een isotoop:</label>
     <select id="isotope">
