--- a/focusverandering.html
+++ b/focusverandering.html
@@ -53,7 +53,8 @@
     </script>
 </head>
 <body>
-    <h1>Bereken Focusverandering</h1>
+    <h1>Tijd na</h1>
+    <h1>Focusverandering</h1>
 
     <form>
         <label for="minuten">Voer de begintijd in:</label><br>
