--- a/cw2.html
+++ b/cw2.html
@@ -77,6 +77,7 @@
     <p id="antwoordResultaat"></p>
     <p id="filmlengteResultaat"></p>
 
+    <li><a href="opnamesklasseb.html">Aantal opnames EN-B</a></li>
 <img src="OpnamesrichtlijnklasseB.png" alt= "Ter info, slechts een richtlijn"  />
 <img src="Schedulematen.png" alt= "Ter info"
  
