--- a/cw2.html
+++ b/cw2.html
@@ -2,48 +2,36 @@
 <html lang="nl">
 <head>
     <link rel="stylesheet" href="styles.css">
-    <a href="index.html" class="home-icon"><i class="fas fa-home"></i></a>
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Effectieve Filmlengte Berekenen</title>
     <script>
         function berekenFilmlengte() {
-            // Haal de gebruikersinput op
             var diameter = parseFloat(document.getElementById("diameter").value);
             var rondnaadCentraal = document.getElementById("rondnaadCentraal").checked;
 
-            // Controleer of invoer geldig is
             if (isNaN(diameter)) {
                 alert("Vul een geldige waarde in voor de diameter.");
                 return;
             }
 
-            // Bereken de omtrek
             var omtrek = diameter * Math.PI;
 
             if (rondnaadCentraal) {
-                // Bereken het aantal films bij Rondnaad Centraal
                 var aantalFilms = Math.ceil(omtrek / 400);
                 var effectieveFilmlengte = omtrek / aantalFilms;
-
-                // Toon de omtrek, aantal films en effectieve filmlengte
                 document.getElementById("omtrekResultaat").innerText = "De omtrek is: " + omtrek.toFixed(2) + " mm";
                 document.getElementById("antwoordResultaat").innerText = "Aantal films dat nodig is: " + aantalFilms;
                 document.getElementById("filmlengteResultaat").innerText = "Effectieve filmlengte per film: " + effectieveFilmlengte.toFixed(2) + " mm";
             } else {
-                // Haal het aantal opnames op
                 var opnames = parseFloat(document.getElementById("opnames").value);
                 if (isNaN(opnames) || opnames === 0) {
                     alert("Vul een geldig aantal opnames in.");
                     return;
                 }
 
-                // Bereken het antwoord door de omtrek te delen door het aantal opnames
                 var antwoord = omtrek / opnames;
-                
-                // Toon de omtrek en het resultaat per opname
                 document.getElementById("omtrekResultaat").innerText = "De omtrek is: " + omtrek.toFixed(2) + " mm";
                 document.getElementById("antwoordResultaat").innerText = "Het resultaat is: " + antwoord.toFixed(2) + " mm per opname";
                 document.getElementById("filmlengteResultaat").innerText = "";
@@ -54,7 +42,79 @@
             var rondnaadCentraal = document.getElementById("rondnaadCentraal").checked;
             document.getElementById("opnames").disabled = rondnaadCentraal;
         }
+
+        function showImageFullSize(img) {
+            var modal = document.getElementById("imageModal");
+            var modalImg = document.getElementById("modalImg");
+            modal.style.display = "block";
+            modalImg.src = img.src;
+        }
+
+        function closeModal() {
+            document.getElementById("imageModal").style.display = "none";
+        }
     </script>
+    <style>
+        /* knop naar link*/
+        .btn {
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 8px;
+        }
+
+        /* Standaard afbeelding styling */
+        img {
+            max-width: 200px;
+            cursor: pointer;
+        }
+
+        /* Modal voor de afbeelding op volledige grootte */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0,0,0);
+            background-color: rgba(0,0,0,0.9);
+        }
+
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 700px;
+        }
+
+        .close {
+            position: absolute;
+            top: 15px;
+            right: 35px;
+            color: #fff;
+            font-size: 40px;
+            font-weight: bold;
+            transition: 0.3s;
+            cursor: pointer;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #bbb;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
     <h1>Effectieve Filmlengte Berekenen</h1>
@@ -77,11 +137,15 @@
     <p id="antwoordResultaat"></p>
     <p id="filmlengteResultaat"></p>
 
-    <li><a href="opnamesklasseb.html">Aantal opnames EN-B</a></li>
-<img src="OpnamesrichtlijnklasseB.png" alt= "Ter info, slechts een richtlijn"  />
-<img src="Schedulematen.png" alt= "Ter info"
- 
+    <li><a href="opnamesklasseb.html" class="btn">Aantal opnames EN-B</a></li>
 
+    <img src="OpnamesrichtlijnklasseB.png" alt="Ter info, slechts een richtlijn" onclick="showImageFullSize(this)">
+    <img src="Schedulematen.png" alt="Ter info" onclick="showImageFullSize(this)">
+
+    <!-- Modal voor afbeelding vergroting -->
+    <div id="imageModal" class="modal" onclick="closeModal()">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="modalImg">
+    </div>
 </body>
 </html>
-
