--- a/cw2.html
+++ b/cw2.html
@@ -57,7 +57,7 @@
     <style>
         /* knop naar link*/
         .btn {
-            background-color: #4CAF50;
+            background-color: #444;
             border: none;
             color: #333;
             padding: 10px 20px;
