--- a/cw2.html
+++ b/cw2.html
@@ -59,7 +59,7 @@
         .btn {
             background-color: #444;
             border: none;
-            color: #333;
+            color: black;
             padding: 10px 20px;
             text-align: center;
             text-decoration: none;
