--- a/opnamesklasseb.html
+++ b/opnamesklasseb.html
@@ -121,6 +121,8 @@
         <h2>Opstelling 2</h2>
     </div>
 
+    <li><a href="cw2.html">CW / Effectieve Filmlengte</a></li>
+
     <script>
         document.getElementById('coordinates-form').addEventListener('submit', function(event) {
             event.preventDefault();
