--- a/opnamesklasseb.html
+++ b/opnamesklasseb.html
@@ -87,6 +87,20 @@
         #container1 h2, #container2 h2 {
             color: red;
         }
+        .btn {
+            background-color: #666;
+            border: none;
+            color: #black;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 8px;
+        }
+
     </style>
 </head>
 <body>
