--- a/Draadjesv2.html
+++ b/Draadjesv2.html
@@ -11,8 +11,23 @@
 </head>
 <body>
     <h1>BKI vereiste draadje</h1>
-    <h3>Gebaseerd op nominale wanddikte</h3>
-    <h3>(DWDI = BKI bronzijde,DWSI = BKI Filmzijde)</h3>
+    
+    
+     <!-- De knop om het pop-up venster te openen -->
+    <button class="info-btn" onclick="openModal('myModal')">i</button>
+
+    <!-- Het pop-up venster -->
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('myModal')">&times;</span>
+            <p>Deze tool gaat uit van de nominale wanddikte bij EN en zal bij ASME de maximale lasoverdikte voorstellen en bij de wanddikte tellen.
+            Bij EN wordt er gebruikt van de regel dat bij gebruik van Se75 of Ir192 er bij bepaalde diktes een draadje minder zichtbaar hoeft te zijn, dit doet de tool al meenemen en je hoeft dus niet zelf nog een draadje minder te nemen.
+            </p>
+        </div>
+    </div>
+
+    <script src="script.js"></script> <!-- Link naar externe JavaScript -->
+
 
     <form id="iqiForm">
         <label for="norm">Kies de norm:</label>
