--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title> "RT Tools" </title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link rel="manifest" href="/rt/manifest.json">
+    <link rel="stylesheet" href="styles.css">
     <style>
         :root {
             --primary-color: #007BFF;
