--- a/opnamesklasseb.html
+++ b/opnamesklasseb.html
@@ -106,6 +106,20 @@
 <body>
     <h1>Aantal opnames klasse B</h1>
 
+      <!-- De knop om het pop-up venster te openen -->
+    <button class="info-btn" onclick="openModal('myModal')">i</button>
+
+    <!-- Het pop-up venster -->
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('myModal')">&times;</span>
+            <p>Deze tool geeft je geen direct antwoord maar zal op basis van de ingevoerde gegevens een rode punt op de afbeelding zetten waardoor je zelf kunt zien hoeveel opnames het zouden moeten zijn.                
+            </p>
+        </div>
+    </div>
+
+    <script src="script.js"></script> <!-- Link naar externe JavaScript -->
+
     <!-- Formulier voor invoer van gegevens -->
     <form id="coordinates-form">
         <div class="form-container">
