--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
         <li><a href="cw2.html">CW / Effectieve Filmlengte</a></li>
         <li><a href="opnamesklasseb.html">Aantal opnames EN-B</a></li>
         <li><a href="LW_Verdeler.html">Langsnaad Verdeler</a></li>
+        <li><a href="bundelbreedte.html">Bundelgrootte</a></li>
         <li><a href="afzettinggamma.html">Afzetting Gamma</a></li>
         
     </ul>
