--- a/bundelbreedte.html
+++ b/bundelbreedte.html
@@ -39,6 +39,7 @@
         .result {
             margin-top: 20px;
             padding: 10px;
+            color: black;
             background-color: #f0f0f0;
             border: 1px solid #ccc;
         }
