--- a/bundelbreedte.html
+++ b/bundelbreedte.html
@@ -27,7 +27,7 @@
             display: block;
             width: 100%;
             padding: 10px;
-            background-color: #4a4a4a;
+            background-color: #646464;
             color: white;
             border: none;
             cursor: pointer;
