--- a/verval2.html
+++ b/verval2.html
@@ -29,7 +29,7 @@
             }
 
             // Toon het resultaat
-            document.getElementById("result").innerHTML = `De activiteit is nog <span style="color:red">${ci2.toFixed(2)} Curie</span> op <span style="color:red">${secondDate.toLocaleDateString('nl-NL')}</span>.`;
+            document.getElementById("result").innerHTML = `De activiteit is nog <span style="color:#F5DF4D">${ci2.toFixed(2)} Curie</span> op <span style="color:#F5DF4D">${secondDate.toLocaleDateString('nl-NL')}</span>.`;
         }
 
         // Functie om CSV-bestand in te laden en weer te geven als tabel met aanklikbare rijen
