--- a/verval2.html
+++ b/verval2.html
@@ -97,7 +97,7 @@
             }
 
             // Toon direct het resultaat in het juiste formaat met rode kleur voor bron, activiteit en datum
-            document.getElementById("result").innerHTML = `Bron <span style="color:red">${bron}</span> heeft nog <span style="color:red">${ci2.toFixed(2)} Ci</span> op <span style="color:red">${secondDate.toLocaleDateString('nl-NL')}</span>.`;
+            document.getElementById("result").innerHTML = `Bron <span style="color:#F5DF4D">${bron}</span> heeft nog <span style="color:#F5DF4D">${ci2.toFixed(2)} Ci</span> op <span style="color:#F5DF4D">${secondDate.toLocaleDateString('nl-NL')}</span>.`;
         }
 
         // Laad de tabel als de pagina geladen is
