--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <li><a href="MinFFD.html">Minimale FFD</a></li>
         <li><a href="Draadjesv2.html">Draadvereiste EN-B, ASME</a></li>
         <li><a href="cw2.html">CW / Effectieve Filmlengte</a></li>
-        <li><a href="opnamesklasseb.html">Aantal opnames EN-B</a></li>
+        <li><a href="opnamesklasseb.html">Aantal opnames EN</a></li>
         <li><a href="LW_Verdeler.html">Langsnaad Verdeler</a></li>
         <li><a href="bundelbreedte.html">Bundelgrootte</a></li>
         <li><a href="afzettinggamma.html">Afzetting Gamma</a></li>
