--- a/cw2.html
+++ b/cw2.html
@@ -153,7 +153,7 @@
     <p id="antwoordResultaat"></p>
     <p id="filmlengteResultaat"></p>
 
-    <li><a href="opnamesklasseb.html" class="btn">Aantal opnames EN-B</a></li>
+    <li><a href="opnamesklasseb.html" class="btn">Aantal opnames EN</a></li>
 
     <img src="OpnamesrichtlijnklasseB.png" alt="Ter info, slechts een richtlijn" onclick="showImageFullSize(this)">
     <img src="Schedulematen.png" alt="Ter info" onclick="showImageFullSize(this)">
