--- a/Draadjesv2.html
+++ b/Draadjesv2.html
@@ -255,7 +255,7 @@
                 }
             }
 
-            document.getElementById("result").innerText = "Het vereiste draadje is: " + <span style="color:#F5DF4D"> wire </span>;
+            document.getElementById("result").innerText = "Het vereiste draadje is: " + wire;
         });
 
         document.getElementById("norm").addEventListener("change", function() {
