--- a/Draadjesv2.html
+++ b/Draadjesv2.html
@@ -89,7 +89,7 @@
     </form>
 
     <h2>Resultaat</h2>
-    <p id="result"></p>
+    <p id="result" style="color: #F5DF4D;"></p>
     
     <img id="asmeImage" src="Lascategorie.png" alt="ASME Lastype" style="display:none;">
 
