--- a/MinFFD.html
+++ b/MinFFD.html
@@ -58,7 +58,7 @@
         <button type="button" onclick="berekenFFD()">Bereken FFD</button>
     </form>
 
-    <p id="output"></p>
+    <p id="output" style="color: #F5DF4D;"></p>
 
     <script>
         const standaardSelect = document.getElementById("standaard");
