--- a/filmsoortverandering.html
+++ b/filmsoortverandering.html
@@ -107,6 +107,6 @@
     </form>
 
     <h2>Resultaat</h2>
-    <p id="resultaat"></p>
+    <p id="resultaat" style="color: #F5DF4D;"></p>
 </body>
 </html>
