--- a/cw2.html
+++ b/cw2.html
@@ -149,9 +149,9 @@
     </form>
 
     <h2>Resultaat:</h2>
-    <p id="omtrekResultaat"></p>
-    <p id="antwoordResultaat"></p>
-    <p id="filmlengteResultaat"></p>
+    <p id="omtrekResultaat" style="color: #F5DF4D;"></p>
+    <p id="antwoordResultaat" style="color: #F5DF4D;"></p>
+    <p id="filmlengteResultaat" style="color: #F5DF4D;"></p>
 
     <li><a href="opnamesklasseb.html" class="btn">Aantal opnames EN</a></li>
 
