--- a/LW_Verdeler.html
+++ b/LW_Verdeler.html
@@ -33,7 +33,7 @@
     <p>Voer de totale lengte in (in mm):</p>
     <input type="number" id="totaleLengte" placeholder="Totale lengte in mm" required>
     <button onclick="verdeelLengte()">Verdeel Lengte</button>
-    <p id="result" style="color: #F5DF4D;"></p>
+    <p id="resultaat" style="color: #F5DF4D;"></p>
 </div>
 
 <script>
