--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> "RT Tools" </title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="manifest" href="/rt/manifest.json">
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -152,16 +153,16 @@
 
 
     <ul class="link-list">
-        <li><a href="focusverandering.html">Focusverandering</a></li>
-        <li><a href="filmsoortverandering.html">D4 D5 D7</a></li>
-        <li><a href="verval2.html">Bronsterkte</a></li>
-        <li><a href="MinFFD.html">Minimale FFD</a></li>
-        <li><a href="Draadjesv2.html">Draadvereiste EN-B, ASME</a></li>
-        <li><a href="cw2.html">CW / Effectieve Filmlengte</a></li>
-        <li><a href="opnamesklasseb.html">Aantal opnames EN</a></li>
-        <li><a href="LW_Verdeler.html">Langsnaad Verdeler</a></li>
-        <li><a href="bundelbreedte.html">Bundelgrootte</a></li>
-        <li><a href="afzettinggamma.html">Afzetting Gamma</a></li>
+        <li><a href="focusverandering.html"><i class="fa-solid fa-up-down"></i>Focusverandering</a></li>
+        <li><a href="filmsoortverandering.html"><i class="fa-solid fa-repeat"></i>D4 D5 D7</a></li>
+        <li><a href="verval2.html"><i class="fa-solid fa-radiation"></i>Bronsterkte</a></li>
+        <li><a href="MinFFD.html"><i class="fa-solid fa-ruler"></i>Minimale FFD</a></li>
+        <li><a href="Draadjesv2.html"><i class="fa-solid fa-grip-lines-vertical"></i>Draadvereiste EN-B, ASME</a></li>
+        <li><a href="cw2.html"> <i class="fa-solid fa-circle-radiation"></i>CW / Effectieve Filmlengte</a></li>
+        <li><a href="opnamesklasseb.html"><i class="fa-solid fa-star-of-life"></i>Aantal opnames EN</a></li>
+        <li><a href="LW_Verdeler.html"><i class="fa-solid fa-tape"></i>Langsnaad Verdeler</a></li>
+        <li><a href="bundelbreedte.html"><i class="fa-solid fa-less-than"></i>Bundelgrootte</a></li>
+        <li><a href="afzettinggamma.html"><i class="fa-solid fa-tower-observation"></i>Afzetting Gamma</a></li>
         
     </ul>
 
