--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         .link-list a {
             text-decoration: none;
-            color: var(--text-color);
+            color: #F5DF4D;
             background-color: var(--button-color);
             padding: 15px 25px;
             border-radius: 50px;
