--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <li><a href="opnamesklasseb.html"><i class="fa-solid fa-star-of-life"></i>     Aantal opnames EN</a></li>
         <li><a href="LW_Verdeler.html"><i class="fa-solid fa-tape"></i>     Langsnaad Verdeler</a></li>
         <li><a href="bundelbreedte.html"><i class="fa-solid fa-less-than"></i>     Bundelgrootte</a></li>
-        <li><a href="afzettinggamma.html"><i class="fa-solid fa-tower-observation"></i>     Afzetting Gamma</a></li>
+        <li><a href="afzettinggamma.html"><i class="fa-solid fa-road-barrier"></i>     Afzetting Gamma</a></li>
         
     </ul>
 
