--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> "RT Tools" </title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css">
     <link rel="manifest" href="/rt/manifest.json">
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -61,6 +61,10 @@
             font-weight: bold;
             transition: background-color 0.3s, transform 0.3s;
             display: inline-block;
+        }
+
+        .link-list a i {
+            margin-right: 10px;
         }
 
         .link-list a:hover {
