--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <script src="script.js"></script> <!-- Link naar externe JavaScript -->
 
     <ul class="link-list">
-        <li><a href="focusverandering.html"><i class="fa-solid fa-up-down"></i>Focusverandering</a><i class="fa-solid fa-up-down"></i></li>
+        <li><a href="focusverandering.html"><i class="fa-solid fa-up-down"></i>Focusverandering</a></li>
         <li><a href="filmsoortverandering.html"><i class="fa-solid fa-repeat"></i>      D4 D5 D7</a></li>
         <li><a href="verval2.html"><i class="fa-solid fa-radiation"></i>      Bronsterkte</a></li>
         <li><a href="MinFFD.html"><i class="fa-solid fa-ruler"></i>      Minimale FFD</a></li>
