--- a/focusverandering.html
+++ b/focusverandering.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-    <link rel="stylesheet" href="styles.css">
     <a href="index.html" class="home-icon"><i class="fas fa-home"></i></a>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -53,8 +52,8 @@
     </script>
 </head>
 <body>
-    <h1>Tijd na</h1>
-    <h1>Focusverandering</h1>
+    <h1 style="color: #F5DF4D; text-align: center;">Tijd na</h1>
+    <h1 style="color: #F5DF4D; text-align: center;">Focusverandering</h1>
 
     
     <!-- De knop om het pop-up venster te openen -->
