--- a/Draadjesv2.html
+++ b/Draadjesv2.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQI Wire Calculator</title>
+    <title>BKI Draadvereiste</title>
 </head>
 <body>
-    <h1>BKI vereiste draadje</h1>
+    <h1 style="color: #F5DF4D; text-align: center;">Vereist Draadje</h1>
     
     
      <!-- De knop om het pop-up venster te openen -->
