--- a/LW_Verdeler.html
+++ b/LW_Verdeler.html
@@ -29,7 +29,7 @@
     
     
 <div class="container">
-    <h1>Langsnaad verdeler</h1>
+    <h1 style="color: #F5DF4D; text-align: center;">Langsnaad Verdeler</h1>
     <p>Voer de totale lengte in (in mm):</p>
     <input type="number" id="totaleLengte" placeholder="Totale lengte in mm" required>
     <button onclick="verdeelLengte()">Verdeel Lengte</button>
