--- a/MinFFD.html
+++ b/MinFFD.html
@@ -10,7 +10,7 @@
     <title>Film Focus Afstand Berekening</title>
 </head>
 <body>
-    <h1>Bereken de Film Focus Afstand (FFD)</h1>
+    <h1 style="color: #F5DF4D; text-align: center;">Bepaal de Minimale FFD</h1>
 
      <!-- De knop om het pop-up venster te openen -->
     <button class="info-btn" onclick="openModal('myModal')">i</button>
