--- a/afzettinggamma.html
+++ b/afzettinggamma.html
@@ -42,7 +42,7 @@
     </script>
 </head>
 <body>
-    <h1>Afzetting Berekening</h1>
+    <h1 style="color: #F5DF4D; text-align: center;">Afzetting gamma</h1>
 
       <!-- De knop om het pop-up venster te openen -->
     <button class="info-btn" onclick="openModal('myModal')">i</button>
