--- a/bundelbreedte.html
+++ b/bundelbreedte.html
@@ -64,7 +64,7 @@
     <script src="script.js"></script> <!-- Link naar externe JavaScript -->
 
     <div class="container">
-        <h2>Bundelgrootte</h2>
+        <h1 style="color: #F5DF4D; text-align: center;">Bundelgrootte</h1>
         <label for="tubeSelect">Kies een röntgenbuis:</label>
         <select id="tubeSelect">
             <option value="yxlon300">Yxlon 300 3mm brandvlek: 40° x 55°</option>
