--- a/cw2.html
+++ b/cw2.html
@@ -118,7 +118,7 @@
     </style>
 </head>
 <body>
-    <h1>Effectieve Filmlengte Berekenen</h1>
+    <h1 style="color: #F5DF4D; text-align: center;">Rondnaad tool</h1>
 
       <!-- De knop om het pop-up venster te openen -->
     <button class="info-btn" onclick="openModal('myModal')">i</button>
