--- a/filmsoortverandering.html
+++ b/filmsoortverandering.html
@@ -74,7 +74,7 @@
     </script>
 </head>
 <body>
-    <h1>Bereken D4, D5 of D7</h1>
+    <h1 style="color: #F5DF4D; text-align: center;">Filmsoort verandering</h1>
      <!-- De knop om het pop-up venster te openen -->
     <button class="info-btn" onclick="openModal('myModal')">i</button>
 
