--- a/opnamesklasseb.html
+++ b/opnamesklasseb.html
@@ -114,7 +114,7 @@
     </style>
 </head>
 <body>
-    <h1>Aantal opnames klasse A en B</h1>
+    <h1 style="color: #F5DF4D; text-align: center;">Aantal opnames volgens EN</h1>
 
     <!-- De knop om het pop-up venster te openen -->
     <button class="info-btn" onclick="openModal('myModal')">i</button>
