--- a/verval2.html
+++ b/verval2.html
@@ -107,7 +107,7 @@
     </script>
 </head>
 <body>
-    <h1>Activiteit</h1>
+    <h1 style="color: #F5DF4D; text-align: center;">Activiteit</h1>
 
       <!-- De knop om het pop-up venster te openen -->
     <button class="info-btn" onclick="openModal('myModal')">i</button>
