--- a/opnamesklasseb.html
+++ b/opnamesklasseb.html
@@ -15,8 +15,9 @@
         /* Flexbox styling for the form */
         .form-container {
             display: flex;
-            flex-wrap: wrap;
+            flex-wrap: inline-block;
             gap: 10px;
+            margin: 10px;
         }
 
         .form-item {
