--- a/opnamesklasseb.html
+++ b/opnamesklasseb.html
@@ -15,7 +15,7 @@
         /* Flexbox styling for the form */
         .form-container {
             display: flex;
-            flex-wrap: inline-block;
+            flex-wrap: wrap;
             gap: 10px;
             margin: 10px;
         }
