--- a/verval2.html
+++ b/verval2.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activiteitsberekening</title>
     <script>
-        // Functie om de activiteit te berekenen
-        function calculateCurrentActivity(type, activiteit, datum) {
-            const firstDate = new Date(datum.split('-').reverse().join('-')); // Zet de datum om
+        // Functie om de huidige activiteit te berekenen
+        function calculateCurrentActivity(activiteit, type, datum) {
+            const firstDate = new Date(datum.split('-').reverse().join('-')); // Oorspronkelijke datum
             const secondDate = new Date(); // Huidige datum
 
             // Bereken het aantal dagen tussen de twee datums
@@ -18,18 +18,41 @@
             const days = timeDifference / (1000 * 3600 * 24);
 
             let ci2 = 0;
-
-            // Bereken de huidige activiteit
+            // Berekening afhankelijk van het isotoop type
             if (type === "Se75") {
                 ci2 = activiteit / Math.pow(2, days / 120);
             } else if (type === "Ir192") {
                 ci2 = activiteit / Math.pow(2, days / 74);
             }
 
-            return ci2.toFixed(2); // Retourneer de activiteit met 2 decimalen
+            return ci2.toFixed(2); // Geeft de huidige activiteit terug
         }
 
-        // Functie om CSV-bestand in te laden en weer te geven als tabel met extra kolom "Huidige Activiteit"
+        // Functie om handmatige invoer te berekenen
+        function calculateActivity() {
+            const isotope = document.getElementById("isotope").value;
+            const ci1 = parseFloat(document.getElementById("ci1").value);
+            const firstDate = new Date(document.getElementById("firstDate").value);
+            const secondDate = new Date(document.getElementById("secondDate").value || new Date()); // Huidige datum als standaard
+
+            // Bereken het aantal dagen tussen de twee datums
+            const timeDifference = secondDate - firstDate;
+            const days = timeDifference / (1000 * 3600 * 24);
+
+            let ci2 = 0;
+
+            // Controleer welk isotoop is gekozen en voer de juiste berekening uit
+            if (isotope === "Se75") {
+                ci2 = ci1 / Math.pow(2, days / 120);
+            } else if (isotope === "Ir192") {
+                ci2 = ci1 / Math.pow(2, days / 74);
+            }
+
+            // Toon het resultaat
+            document.getElementById("result").innerHTML = `De activiteit is nog <span style="color:#F5DF4D">${ci2.toFixed(2)} Curie</span> op <span style="color:#F5DF4D">${secondDate.toLocaleDateString('nl-NL')}</span>.`;
+        }
+
+        // Functie om CSV-bestand in te laden en de tabel te genereren met de huidige activiteit
         function loadCSV(file) {
             fetch(file)
                 .then(response => response.text())
@@ -41,30 +64,34 @@
                     rows.forEach((row, index) => {
                         const cols = row.split(",");
                         if (index === 0) {
-                            // Kopteksten aanpassen en extra kolom toevoegen
-                            table += '<th>Bron</th><th>Type</th><th>Huidige Activiteit</th></tr>';
+                            // Voeg kopteksten toe, zonder de 'activiteit' en 'datum' kolommen
+                            table += '<th>Bron</th><th>Type</th><th>Huidige Activiteit (Ci)</th></tr>';
                         } else {
                             const bron = cols[0];
                             const type = cols[1];
-                            const activiteit = parseFloat(cols[2]);
+                            const activiteit = cols[2];
                             const datum = cols[3];
 
                             // Bereken de huidige activiteit
-                            const currentActivity = calculateCurrentActivity(type, activiteit, datum);
+                            const currentActivity = calculateCurrentActivity(activiteit, type, datum);
 
-                            // Voeg een rij toe met de bron, type en huidige activiteit
-                            table += `<tr><td>${bron}</td><td>${type}</td><td style="color:#F5DF4D;">${currentActivity} Ci</td></tr>`;
+                            // Voeg rijen toe met de huidige activiteit
+                            table += `<tr>
+                                <td>${bron}</td>
+                                <td>${type}</td>
+                                <td style="color:#F5DF4D;">${currentActivity}</td>
+                            </tr>`;
                         }
                     });
                     table += '</table>';
 
-                    // Plaats de tabel onderaan de pagina in de div met id="csvTable"
+                    // Plaats de tabel op de pagina in de div met id="csvTable"
                     document.getElementById("csvTable").innerHTML = table;
                 })
                 .catch(error => console.error("Error loading CSV:", error));
         }
 
-        // Laad de tabel als de pagina geladen is
+        // Laad de tabel zodra de pagina geladen is
         window.onload = function() {
             loadCSV('bronnen.csv');  // Laadt gegevens uit bronnen.csv
         };
@@ -73,22 +100,40 @@
 <body>
     <h1 style="color: #F5DF4D; text-align: center;">Activiteit</h1>
 
-    <!-- De knop om het pop-up venster te openen -->
     <button class="info-btn" onclick="openModal('myModal')">i</button>
 
-    <!-- Het pop-up venster -->
     <div id="myModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('myModal')">&times;</span>
-            <p>De waardes in de tabel zijn uit de vervoersdocumenten gehaald.
-            </p>
+            <p>De weergegeven activiteit is de huidige activiteit berekend op basis van de oorspronkelijke activiteit en datum.</p>
         </div>
     </div>
 
-    <script src="script.js"></script> <!-- Link naar externe JavaScript -->
+    <script src="script.js"></script>
 
-    <h2>Bronnen Tabel</h2>
-    <!-- Hier wordt de CSV-tabel weergegeven -->
+    <!-- Handmatig invoeren en berekenen -->
+    <h2>Handmatig Activiteit Berekenen</h2>
+    <label for="isotope">Kies een isotoop:</label>
+    <select id="isotope">
+        <option value="Se75">Se75</option>
+        <option value="Ir192">Ir192</option>
+    </select><br><br>
+
+    <label for="ci1">Ci op eerste datum (Ci1):</label>
+    <input type="number" id="ci1" required><br><br>
+
+    <label for="firstDate">Eerste datum:</label>
+    <input type="date" id="firstDate" required><br><br>
+
+    <label for="secondDate">Tweede datum (standaard is de huidige datum):</label>
+    <input type="date" id="secondDate"><br><br>
+
+    <button onclick="calculateActivity()">Bereken activiteit</button>
+
+    <h2 id="result"></h2>
+
+    <!-- Tabel met bronnen en automatisch berekende activiteiten -->
+    <h2>Bronnen Tabel (Automatische Activiteit Berekening)</h2>
     <div id="csvTable">De tabel wordt geladen...</div>
 
 </body>
